--- a/neurips21.html
+++ b/neurips21.html
@@ -6,7 +6,7 @@
         <script type="text/javascript">
             window.location.href = "notebooks/"
         </script>
-        <title>AKBC</title>
+        <title>Neurips '21</title>
     </head>
     <body>
         <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
